--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Maktab88-hw13.pdf
 Express.js/1-1/node_modules
 Express.js/1-2/node_modules
 Express.js/1-3/node_modules
+Express.js/1-4/node_modules
