--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Express.js/1-1/node_modules
 Express.js/1-2/node_modules
 Express.js/1-3/node_modules
 Express.js/1-4/node_modules
+Express.js/1-5/node_modules
+Express.js/1-6/node_modules
